--- a/package.json
+++ b/package.json
@@ -87,5 +87,9 @@
     "prettier:check": "prettier --check --config ./.prettierrc.yaml \"**/*.{js,json,md,sol,ts}\"",
     "test": "hardhat test",
     "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.4.1",
+    "@rari-capital/solmate": "^6.2.0"
   }
 }
